# Fortune-Server

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  server.c  server.h  structures.c  structures.h  tcp_functions.c  tcp_functions.h
